--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,28 @@
     <title>Sanctuary Helpers - Contact Us</title>
 </head>
 <body>
+    <header>
+        <div class="navFlex">
+            <!-- Navigation Bar -->
+            <nav class="navBar" id="home">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html#about">About</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
     
+            <div class="logo">
+                <h3>Sanctuary Helpers</h3>
+            </div>
+        </div>
+    
+        <div class="pageTitle" <h1>Blog</h1>
+        </div>
+    </header>
+
+
+
 </body>
 </html>
