completed Contact HTML, some updates to Home and Blog HTML

--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
 </head>
 <body>
 
-    <header>
-        <!-- Navigation Bar -->
-        <nav class="navBar">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="logo">
-            <h1>Sanctuary Helpers</h1>
+    <header class="headerHome">
+        <!-- Start: wrapper -->
+        <div class="wrapper">
+
+            <!-- Navigation Bar -->
+            <nav class="navBar">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <h1>Sanctuary Helpers</h1>
+            </div>
         </div>
+        <!-- End: wrapper -->
     
         <div class="headerImg">
             <img src="./assets/header-box.png" alt="A matched set of two teal armchairs with a green accent pillow.">
