completed CSS: footer, typography, baseStyles, nav and created rest of needed SCSS files

--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 
     <title>Sanctuary Helpers - Home</title>
 </head>
-<body>
 
+<body>
     <header class="headerHome">
         <!-- Start: wrapper -->
         <div class="wrapper">
-
             <!-- Navigation Bar -->
             <nav class="navBar">
+                <span><h4>Sanctuary Helpers</h4></span>
+
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li>
+                        <h5><a href="./index.html">Home</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./index.html#about">About</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./blog.html">Blog</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./contact.html">Contact</a></h5>
+                    </li>
                 </ul>
             </nav>
+            <!-- End: navBar -->
+            
             <div class="logo">
                 <h1>Sanctuary Helpers</h1>
             </div>
@@ -56,7 +67,6 @@
 
         <!-- Start: Gallery -->
         <section class="gallery wrapper">
-            <p>This is the Gallery section</p>
             <div>
                 <ul>
                     <li><img src="./assets/gallery-image-1.jpg" alt="A green dresser with tow picture frames and a dark yellow vase holding decorative grasses, set against a painted white brick wall."></li>
