--- a/contact.html
+++ b/contact.html
@@ -10,29 +10,32 @@
 
     <title>Sanctuary Helpers - Contact Us</title>
 </head>
+
 <body>
     <header class="headerContact">
         <!-- Start: wrapper -->
         <div class="wrapper">
-            <div class="navFlex">
 
-                <!-- Navigation Bar -->
-                <nav class="navBar" id="home">
-                    <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./index.html#about">About</a></li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-                <!-- End: navBar -->
+            <!-- Navigation Bar -->
+            <nav class="navBar">
+                <h4>Sanctuary Helpers</h4>
+                <ul>
+                    <li>
+                        <h5><a href="./index.html">Home</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./index.html#about">About</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./blog.html">Blog</a></h5>
+                    </li>
+                    <li>
+                        <h5><a href="./contact.html">Contact</a></h5>
+                    </li>
+                </ul>
+            </nav>
+            <!-- End: navBar -->
         
-                <div class="smallLogo">
-                    <h3>Sanctuary Helpers</h3>
-                </div>
-            </div>
-            <!-- End: navFlex -->
-
             <h1>Get In Touch</h1>
             </div>
         </div>
@@ -54,7 +57,7 @@
             <label for="message" class="sr-only">Message us</label>
             <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
         
-            <button>Submit</button>
+            <button class="formButton">Submit</button>
         </form>
         <!-- End: Message Form -->
 
