added drop-shadows to imgs, Home>header and >discover completed

--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
     <section class = "posts">
         <div class="blogFlex">
             <div class="blogEntry">
-                <img src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
+                <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
                 <h2>Finding the Right Pieces For Your New Space</h2>
                 <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium dolor minus magni atque hic voluptatum voluptas placeat voluptates soluta expedita similique natus ratione nobis ipsa, officia dolores! Ipsum totam amet magnam iste ullam pariatur voluptas.</p>
@@ -61,7 +61,7 @@
             </div>
 
             <aside>
-                <img src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
+                <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
                 <h3>Our Mission</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe consequuntur reprehenderit voluptates incidunt optio!</p>
                 <p>Find out more</p>
