--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <section class="contact wrapper">
 
         <!-- Start: Message Form -->
-        <form>
+        <form class="shadowRight">
             <div class="formFlex" <label for="name" class="sr-only">Name</label>
                 <input type="text" id="name" placeholder="Name">
         
