completed Home>Gallery and >Search, working on Contact page

--- a/blog.html
+++ b/blog.html
@@ -49,30 +49,36 @@
         <div class="blogFlex">
             <div class="blogEntry">
                 <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
-                <h2>Finding the Right Pieces For Your New Space</h2>
-                <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium dolor minus magni atque hic voluptatum voluptas placeat voluptates soluta expedita similique natus ratione nobis ipsa, officia dolores! Ipsum totam amet magnam iste ullam pariatur voluptas.</p>
+                <div class="blogText">
+                    <h2>Finding the Right Pieces For Your New Space</h2>
+                    <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium dolor minus magni atque hic voluptatum voluptas placeat voluptates soluta expedita similique natus ratione nobis ipsa, officia dolores! Ipsum totam amet magnam iste ullam pariatur voluptas.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, pariatur. Expedita sint itaque et saepe blanditiis eveniet consequatur enim recusandae ipsam repudiandae ut voluptatum, dolorum quae quod! Non architecto praesentium in dolorum totam, deserunt animi velit incidunt rerum aliquam cumque officia eveniet minus quidem, et laborum quis?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, pariatur. Expedita sint itaque et saepe blanditiis eveniet consequatur enim recusandae ipsam repudiandae ut voluptatum, dolorum quae quod! Non architecto praesentium in dolorum totam, deserunt animi velit incidunt rerum aliquam cumque officia eveniet minus quidem, et laborum quis?</p>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam labore suscipit ab ipsum mollitia consequatur repellat, soluta laudantium exercitationem quos nihil ratione consectetur ex. Beatae explicabo molestiae impedit molestias ipsum repudiandae porro quod tenetur dolore dolores, ullam praesentium ad culpa. Nisi reiciendis quis, dolorum, cupiditate deleniti illum atque assumenda ratione ad facere earum perspiciatis corrupti impedit itaque. Obcaecati dolores ipsa repudiandae porro in cum aperiam, debitis perspiciatis explicabo. Laudantium, sit numquam!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam labore suscipit ab ipsum mollitia consequatur repellat, soluta laudantium exercitationem quos nihil ratione consectetur ex. Beatae explicabo molestiae impedit molestias ipsum repudiandae porro quod tenetur dolore dolores, ullam praesentium ad culpa. Nisi reiciendis quis, dolorum, cupiditate deleniti illum atque assumenda ratione ad facere earum perspiciatis corrupti impedit itaque. Obcaecati dolores ipsa repudiandae porro in cum aperiam, debitis perspiciatis explicabo. Laudantium, sit numquam!</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Sed mollitia in qui.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Sed mollitia in qui.</p>
+                </div>
             </div>
 
             <aside>
-                <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
-                <h3>Our Mission</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe consequuntur reprehenderit voluptates incidunt optio!</p>
-                <p>Find out more</p>
+                <div class="asideImg">
+                    <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
+                </div>
+                <div class="asideText">
+                    <h3>Our Mission</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe consequuntur reprehenderit voluptates incidunt optio!</p>
+                    <p>Find out more</p>
 
-                <h3>Recent Posts</h3>
-                <ul class="recentPostList">
-                    <li><p>Lorem ipsum dolor sit.</p></li>
-                    <li><p>Lorem ipsum dolor sit.</p></li>
-                    <li><p>Lorem ipsum dolor sit.</p></li>
-                    <li><p>Lorem ipsum dolor sit.</p></li>
-                </ul>
+                    <h3>Recent Posts</h3>
+                    <ul class="recentPostList">
+                        <li><p>Lorem ipsum dolor sit.</p></li>
+                        <li><p>Lorem ipsum dolor sit.</p></li>
+                        <li><p>Lorem ipsum dolor sit.</p></li>
+                        <li><p>Lorem ipsum dolor sit.</p></li>
+                    </ul>
+                </div>
             </aside>
         </div>
     </section>
