--- a/blog.html
+++ b/blog.html
@@ -43,97 +43,97 @@
 
     </header>
 
+    <main>
+        <!-- Start: Posts -->
+        <section class = "posts">
+            <div class="blogFlex">
+                <div class="blogEntry">
+                    <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
+                    <div class="blogText">
+                        <h2>Finding the Right Pieces For Your New Space</h2>
+                        <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium dolor minus magni atque hic voluptatum voluptas placeat voluptates soluta expedita similique natus ratione nobis ipsa, officia dolores! Ipsum totam amet magnam iste ullam pariatur voluptas.</p>
 
-    <!-- Start: Posts -->
-    <section class = "posts">
-        <div class="blogFlex">
-            <div class="blogEntry">
-                <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
-                <div class="blogText">
-                    <h2>Finding the Right Pieces For Your New Space</h2>
-                    <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium dolor minus magni atque hic voluptatum voluptas placeat voluptates soluta expedita similique natus ratione nobis ipsa, officia dolores! Ipsum totam amet magnam iste ullam pariatur voluptas.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, pariatur. Expedita sint itaque et saepe blanditiis eveniet consequatur enim recusandae ipsam repudiandae ut voluptatum, dolorum quae quod! Non architecto praesentium in dolorum totam, deserunt animi velit incidunt rerum aliquam cumque officia eveniet minus quidem, et laborum quis?</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, pariatur. Expedita sint itaque et saepe blanditiis eveniet consequatur enim recusandae ipsam repudiandae ut voluptatum, dolorum quae quod! Non architecto praesentium in dolorum totam, deserunt animi velit incidunt rerum aliquam cumque officia eveniet minus quidem, et laborum quis?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam labore suscipit ab ipsum mollitia consequatur repellat, soluta laudantium exercitationem quos nihil ratione consectetur ex. Beatae explicabo molestiae impedit molestias ipsum repudiandae porro quod tenetur dolore dolores, ullam praesentium ad culpa. Nisi reiciendis quis, dolorum, cupiditate deleniti illum atque assumenda ratione ad facere earum perspiciatis corrupti impedit itaque. Obcaecati dolores ipsa repudiandae porro in cum aperiam, debitis perspiciatis explicabo. Laudantium, sit numquam!</p>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam labore suscipit ab ipsum mollitia consequatur repellat, soluta laudantium exercitationem quos nihil ratione consectetur ex. Beatae explicabo molestiae impedit molestias ipsum repudiandae porro quod tenetur dolore dolores, ullam praesentium ad culpa. Nisi reiciendis quis, dolorum, cupiditate deleniti illum atque assumenda ratione ad facere earum perspiciatis corrupti impedit itaque. Obcaecati dolores ipsa repudiandae porro in cum aperiam, debitis perspiciatis explicabo. Laudantium, sit numquam!</p>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Sed mollitia in qui.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Sed mollitia in qui.</p>
+                    </div>
                 </div>
+
+                <aside>
+                    <div class="asideImg">
+                        <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
+                    </div>
+                    <div class="asideText">
+                        <h3>Our Mission</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe consequuntur reprehenderit voluptates incidunt optio!</p>
+                        <p>Find out more</p>
+
+                        <h3>Recent Posts</h3>
+                        <ul class="recentPostList">
+                            <li><p>Lorem ipsum dolor sit.</p></li>
+                            <li><p>Lorem ipsum dolor sit.</p></li>
+                            <li><p>Lorem ipsum dolor sit.</p></li>
+                            <li><p>Lorem ipsum dolor sit.</p></li>
+                        </ul>
+                    </div>
+                </aside>
             </div>
+        </section>
+        <!-- End: Posts -->
 
-            <aside>
-                <div class="asideImg">
-                    <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
+
+        <!-- Start: Comments -->
+        <section class="comments">
+            <div class="wrapper">
+                <h3>Comments</h3>
+
+                <!-- Comment 1 -->
+                <div class="commentFlex">
+                    <div class="commentImg">
+                        <img src="./assets/comment-image.jpg" alt="A commenter's user-graphic.">
+                    </div>
+                    <div class="commentText">
+                        <p class="dateAllCaps">Tuesday October 9th, 2019 by Davin</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis aliquid nostrum assumenda praesentium sint in! Illum recusandae facere nihil fuga eveniet reiciendis sapiente exercitationem, nulla debitis, ullam quia odio eligendi dolor?</p>
+                    </div>
                 </div>
-                <div class="asideText">
-                    <h3>Our Mission</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe consequuntur reprehenderit voluptates incidunt optio!</p>
-                    <p>Find out more</p>
 
-                    <h3>Recent Posts</h3>
-                    <ul class="recentPostList">
-                        <li><p>Lorem ipsum dolor sit.</p></li>
-                        <li><p>Lorem ipsum dolor sit.</p></li>
-                        <li><p>Lorem ipsum dolor sit.</p></li>
-                        <li><p>Lorem ipsum dolor sit.</p></li>
-                    </ul>
+                <!-- Comment 2 -->
+                <div class="commentFlex">
+                    <div class="commentImg">
+                        <img src="./assets/comment-image2.jpg" alt="A commenter's user-graphic.">
+                    </div>
+                
+                    <div class="commentText">
+                        <p class="dateAllCaps">Wednesday October 10th, 2019 by Lisa</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur excepturi exercitationem eum eius beatae adipisci, doloremque maiores temporibus.</p>
+                    </div>
                 </div>
-            </aside>
-        </div>
-    </section>
-    <!-- End: Posts -->
 
+                <!-- Start: Comment Form -->
+                <form>
+                    <div class="formFlex"
+                        <label for="name" class="sr-only">Name</label>
+                        <input type="text" id="name" placeholder="NAME">
 
-    <!-- Start: Comments -->
-    <section class="comments">
-        <div class="wrapper">
-            <h3>Comments</h3>
+                        <label for="email" class="sr-only">Email</label>
+                        <input type="email" id="email" placeholder="EMAIL">
+                    </div>
 
-            <!-- Comment 1 -->
-            <div class="comment01Flex">
-                <div class="commentImg">
-                    <img src="./assets/comment-image.jpg" alt="A commenter's user-graphic.">
-                </div>
-                <div class="commentText">
-                    <p class="dateAllCaps">Tuesday October 9th, 2019 by Davin</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis aliquid nostrum assumenda praesentium sint in! Illum recusandae facere nihil fuga eveniet reiciendis sapiente exercitationem, nulla debitis, ullam quia odio eligendi dolor?</p>
-                </div>
+                    <label for="comment" class="sr-only">Your comment</label>
+                    <textarea name="comment" id="comment" cols="50" rows="5" placeholder="COMMENT"></textarea>
+
+                    <button class="formButton">Post Comment</button>
+                </form>
+                <!-- End: Comment Form -->
             </div>
-
-            <!-- Comment 2 -->
-            <div class="comment02Flex">
-                <div class="commentImg">
-                    <img src="./assets/comment-image2.jpg" alt="A commenter's user-graphic.">
-                </div>
-            
-                <div class="commentText">
-                    <p class="dateAllCaps">Wednesday October 10th, 2019 by Davin</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur excepturi exercitationem eum eius beatae adipisci, doloremque maiores temporibus.</p>
-                </div>
-            </div>
-
-            <!-- Start: Comment Form -->
-            <form>
-                <div class="formFlex"
-                    <label for="name" class="sr-only">Name</label>
-                    <input type="text" id="name" placeholder="Name">
-
-                    <label for="email" class="sr-only">Email</label>
-                    <input type="email" id="email" placeholder="Email">
-                </div>
-
-                <label for="comment" class="sr-only">Your comment</label>
-                <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Comment"></textarea>
-
-                <button class="formButton">Post Comment</button>
-            </form>
-            <!-- End: Comment Form -->
-        </div>
-        <!-- End: wrapper -->
-    </section>
-    <!-- End: Comments -->
-
+            <!-- End: wrapper -->
+        </section>
+        <!-- End: Comments -->
+    </main>
 
     <footer>
         <p>Copyright © 2019 HackerYou</p>
