completed: nav & button effects, forms partial, Blog and Contact pages

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Start: About -->
         <section class="about" id="about">
             <div class="newLocations">
-                <img class="shadowRight" src="./assets/left-image.jpg" alt="View of a dining room table with a natural wood top and white legs with four white chairs. There is a bonsai tree on the table">
+                <img class="shadowRight" src="./assets/left-image.jpg" alt="View of a dining room table with a natural wood top and white legs with four white chairs. There is a potted bonsai tree on the table">
                 <div class="newLocationsText">
                     <h3>New Locations</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda deleniti quia obcaecati cum, itaque architecto alias eum suscipit nobis qui sint beatae possimus.</p>
