--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,9 @@
         <section class = "posts">
             <div class="blogFlex">
                 <div class="blogEntry">
-                    <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
+                    <div class="blogImgRelative">
+                        <img class="shadowRight" src="./assets/blog-post-image.jpg" alt="A medium blue daybed with white linens and throw pillows sits in a bright and airy room.">
+                    </div>
                     <div class="blogText">
                         <h2>Finding the Right Pieces For Your New Space</h2>
                         <p class="dateItalics">Monday, October 5th, 2019 by Saron</p>
@@ -58,13 +60,13 @@
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam labore suscipit ab ipsum mollitia consequatur repellat, soluta laudantium exercitationem quos nihil ratione consectetur ex. Beatae explicabo molestiae impedit molestias ipsum repudiandae porro quod tenetur dolore dolores, ullam praesentium ad culpa. Nisi reiciendis quis, dolorum, cupiditate deleniti illum atque assumenda ratione ad facere earum perspiciatis corrupti impedit itaque. Obcaecati dolores ipsa repudiandae porro in cum aperiam, debitis perspiciatis explicabo. Laudantium, sit numquam!</p>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Sed mollitia in qui.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa et odit asperiores maiores at, officiis culpa accusamus iusto tempora. Non architecto praesentium in dolorum totam, deserunt animi velit incidunt rerum. Sed mollitia in qui.</p>
                     </div>
                 </div>
 
                 <aside>
                     <div class="asideImg">
-                        <img class="shadowLeft" src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
+                        <img src="./assets/sidebar-image.jpg" alt="A copper geometric wire pendulum light fixture.">
                     </div>
                     <div class="asideText">
                         <h3>Our Mission</h3>
@@ -115,7 +117,7 @@
 
                 <!-- Start: Comment Form -->
                 <form>
-                    <div class="formFlex"
+                    <div class="formFlex">
                         <label for="name" class="sr-only">Name</label>
                         <input type="text" id="name" placeholder="NAME">
 
@@ -124,7 +126,7 @@
                     </div>
 
                     <label for="comment" class="sr-only">Your comment</label>
-                    <textarea name="comment" id="comment" cols="50" rows="5" placeholder="COMMENT"></textarea>
+                    <textarea name="comment" id="comment" placeholder="COMMENT"></textarea>
 
                     <button class="formButton">Post Comment</button>
                 </form>
