working on nav slide-out, most mediaQueries completed

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,11 @@
 
             <!-- Navigation Bar -->
             <nav class="navBar">
-                <h4>Sanctuary Helpers</h4>
+                <div class="logoAndMenu">
+                    <h4>Sanctuary Helpers</h4>
+                    <span><h5>Menu</h5></span>
+                </div>
+
                 <ul>
                     <li>
                         <h5><a href="./index.html">Home</a></h5>
