--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <div class="wrapper">
             <!-- Navigation Bar -->
             <nav class="navBar">
-                <span><h4>Sanctuary Helpers</h4></span>
+                <div class="logoAndMenu">
+                    <span><h4>Sanctuary Helpers</h4></span>
+                    <span><h5>Menu</h5></span>
+                </div>
 
-                <ul>
+                <ul class="slideOutNav">
                     <li>
                         <h5><a href="./index.html">Home</a></h5>
                     </li>
