--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,10 @@
     
                 <!-- Navigation Bar -->
                 <nav class="navBar">
-                    <h4>Sanctuary Helpers</h4>
+                    <div class="logoAndMenu">
+                        <h4>Sanctuary Helpers</h4>
+                        <span><h5>Menu</h5></span>
+                    </div>
 
                     <ul>
                         <li>
