--- a/contact.html
+++ b/contact.html
@@ -18,27 +18,43 @@
         <div class="wrapper">
 
             <!-- Navigation Bar -->
-            <nav class="navBar">
-                <div class="logoAndMenu">
+                <nav class="navBar">
                     <h4>Sanctuary Helpers</h4>
-                    <span><h5>Menu</h5></span>
-                </div>
+                
+                    <div class="dropDown">
+                        <i class="fas fa-bars fa-2x"></i>
+                        <ul class="dropDownContent">
+                            <li>
+                                <h5><a href="./index.html">Home</a></h5>
+                            </li>
+                            <li>
+                                <h5><a href="./index.html#about">About</a></h5>
+                            </li>
+                            <li>
+                                <h5><a href="./blog.html">Blog</a></h5>
+                            </li>
+                            <li>
+                                <h5><a href="./contact.html">Contact</a></h5>
+                            </li>
+                        </ul>
+                    </div>
 
-                <ul>
-                    <li>
-                        <h5><a href="./index.html">Home</a></h5>
-                    </li>
-                    <li>
-                        <h5><a href="./index.html#about">About</a></h5>
-                    </li>
-                    <li>
-                        <h5><a href="./blog.html">Blog</a></h5>
-                    </li>
-                    <li>
-                        <h5><a href="./contact.html">Contact</a></h5>
-                    </li>
-                </ul>
-            </nav>
+
+                    <ul class = fullSizeMenu>                        
+                        <li>
+                            <h5><a href="./index.html">Home</a></h5>
+                        </li>
+                        <li>
+                            <h5><a href="./index.html#about">About</a></h5>
+                        </li>
+                        <li>
+                            <h5><a href="./blog.html">Blog</a></h5>
+                        </li>
+                        <li>
+                            <h5><a href="./contact.html">Contact</a></h5>
+                        </li>
+                    </ul>
+                </nav>
             <!-- End: navBar -->
         
             <h1>Get In Touch</h1>
