created event listener - working   ->pulls user name & comment entriesfrom form & logs to console

--- a/blog.html
+++ b/blog.html
@@ -159,5 +159,8 @@
     <footer>
         <p>Copyright © 2019 HackerYou</p>
     </footer>
+
+    <script src="./script.js"></script>
+
 </body>
 </html>
