added alerts to prompt completion of form and indicate successful submit & comments now show up in correct spot!

--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
 
         <!-- Start: Comments -->
         <section class="comments">
-            <div class="wrapper" id="insertNewComment">
+            <div class="wrapper">
                 <h3>Comments</h3>
 
                 <div class="userComments">
